--- a/app/src/main/res/layout/activity_search_news.xml
+++ b/app/src/main/res/layout/activity_search_news.xml
@@ -53,7 +53,9 @@
             android:layout_height="wrap_content">
 
         </android.support.v7.widget.RecyclerView>
+
         <com.wang.avi.AVLoadingIndicatorView
+            android:visibility="invisible"
             android:id="@+id/search_loading_view"
             app:indicatorColor="@color/colorPrimary"
             android:layout_width="200dp"
