--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -56,6 +56,7 @@
             <com.soldiersoul.wutu.views.SimpleMenuItem
                 android:id="@+id/itemChangeSkin"
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
                 app:imgSrc="@drawable/ic_change_skin"
@@ -81,6 +82,7 @@
 
             <com.soldiersoul.wutu.views.SimpleMenuItem
                 android:id="@+id/itemAbout"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
