--- a/app/src/main/res/layout/userinfo_item_layout.xml
+++ b/app/src/main/res/layout/userinfo_item_layout.xml
@@ -13,21 +13,36 @@
         android:layout_height="wrap_content"
         android:text="用户名"/>
 
+
+
+    <LinearLayout
+        android:layout_alignBaseline="@+id/tvItemName"
+        android:layout_alignBottom="@+id/tvItemName"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
     <TextView
-        android:gravity="bottom"
+        android:layout_marginRight="12dp"
+        android:layout_gravity="center_vertical"
+        android:gravity="center"
         android:background="@null"
-        android:cursorVisible="false"
         style="@style/TextAppearance.AppCompat.Body1"
         android:id="@+id/tvUserData"
         android:drawablePadding="18dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="4dp"
-        android:drawableRight="@drawable/ic_right"
-        android:layout_alignBottom="@id/tvItemName"/>
-    
+        />
 
+        <ImageView
+            android:id="@+id/ivRight"
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_right"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_below="@id/tvItemName"
