--- a/app/src/main/res/layout/weapon_list_layout.xml
+++ b/app/src/main/res/layout/weapon_list_layout.xml
@@ -18,7 +18,7 @@
             android:layout_height="90dp"
             android:layout_marginRight="16dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@drawable/ic_loadimg_failed"/>
 
         <TextView
             android:id="@+id/tvWeaponTitle"
