--- a/app/src/main/res/layout/society_photo_album.xml
+++ b/app/src/main/res/layout/society_photo_album.xml
@@ -22,8 +22,9 @@
         <ImageView
             android:src="@mipmap/ic_launcher"
             android:id="@+id/ivAlbumLogo"
+            android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="80dp"/>
+            android:layout_height="120dp"/>
 
         <TextView
             android:id="@+id/tvAlbumName"
